# TND012-Programmering-grk

lab1/code/: CMakeLists.txt  uppgift1.cpp  uppgift2.cpp
lab2/code/: CMakeLists.txt  uppgift1.cpp  uppgift2.cpp  uppgift3.cpp  uppgift4.cpp
lab3/code/: CMakeLists.txt  uppgift1.cpp  uppgift2.cpp  uppgift3.cpp  uppgift4.cpp  uppgift4_out.txt  uppgift4b_out.txt
lab4/code/: CMakeLists.txt  uppgift1.cpp
lab5/code/: CMakeLists.txt  uppgift1.cpp
lab6/code/: CMakeLists.txt  image.cpp  image.h  movie.cpp  movie.h  movies.txt  movies_sorted.txt  uppgift1-output.txt  uppgift1.cpp  uppgift2-input-example.txt  uppgift2-input-large.txt  uppgift2-input-short.txt  uppgift2-output-example.txt  uppgift2-output-large.txt  uppgift2-output-short.txt  uppgift2.cpp
